--- a/app/src/main/res/layout/item_appliance.xml
+++ b/app/src/main/res/layout/item_appliance.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
-    android:layout_height="150dp">
+    android:layout_height="150dp"
+    >
 
     <Button
         android:id="@+id/button_appliance"
